# ir-lang

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
benches/: bench.rs
dev/: DIRECTIVES.md  ROADMAP.md
docs/: API.md
docs/release/: v0.1.0.md  v0.2.0.md  v1.0.0.md
examples/: lower_ast.rs  validation.rs
src/: builder.rs  entity.rs  function.rs  inst.rs  lib.rs  ty.rs  validate.rs
tests/: lowering.rs  proptest.rs  serde.rs
