# =============================================================================
#  R E P S   ·   ir-lang
# =============================================================================
[package]
name    = "ir-lang"
version = "0.2.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "Intermediate representation and lowering from the AST."

# Keywords (5 max)
keywords = ["compiler", "language", "ir", "lowering"]

# Categories
categories = ["development-tools", "compilers"]

# Links
homepage      = "https://github.com/jamesgober/ir-lang"
repository    = "https://github.com/jamesgober/ir-lang"
documentation = "https://docs.rs/ir-lang"

# Authors
authors = ["James Gober <me@jamesgober.com>"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "ir_lang"
path = "src/lib.rs"


# FEATURE FLAGS
# #################################
[features]
default = ["std"]
std = []
# Serialization support.
serde = ["dep:serde"]


# DEPENDENCIES
# #################################
[dependencies]
serde = { version = "1", optional = true, default-features = false, features = ["derive", "alloc"] }


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion  = { version = "0.5", features = ["html_reports"] }
proptest   = "1"
serde_json = "1"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"


# BENCHMARKS
# #################################
[[bench]]
name    = "bench"
harness = false


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
